--- a/Explorer/index.html
+++ b/Explorer/index.html
@@ -109,7 +109,8 @@
             padding: 8px;
         }
         .modal-table th {
-            background-color: #f2f2f2;
+            background-color: #e2e2e2; /* Lighter background */
+            color: #333; /* Dark text color */
             text-align: left;
             width: 30%;
         }
@@ -119,6 +120,10 @@
         .modal-table ul {
             margin: 0;
             padding-left: 20px;
+        }
+        /* Update modal header styles */
+        .modal-content h2, .modal-content h3 {
+            color: #333; /* Change text color to dark gray for better readability */
         }
     </style>
 </head>
