Refactor metadata display in modal to enhance clarity and organization

--- a/Explorer/index.html
+++ b/Explorer/index.html
@@ -221,8 +221,14 @@
                 </tr>
             </table>
 
-            <h3>Metadata Statement</h3>
+            <h3>FIDO Alliance Data</h3>
             <table class="modal-table">
+                <tr>
+                    <th>Versions</th>
+                    <td>
+                        <ul id="modalAuthGetInfoVersions"></ul>
+                    </td>
+                </tr>
                 <tr>
                     <th>Protocol Family</th>
                     <td id="modalProtocolFamily"></td>
@@ -257,44 +263,17 @@
                         <ul id="modalKeyProtection"></ul>
                     </td>
                 </tr>
-            </table>
-
-            <h3>Status Reports</h3>
-            <table class="modal-table">
                 <tr>
                     <th>Status Reports</th>
                     <td>
                         <ul id="modalStatusReports"></ul>
                     </td>
                 </tr>
-            </table>
-
-            <h3>Additional Metadata</h3>
-            <table class="modal-table">
-                <tr>
-                    <th>Second Factor Only</th>
-                    <td id="modalIsSecondFactorOnly"></td>
-                </tr>
                 <tr>
                     <th>Attachment Hint</th>
                     <td id="modalAttachmentHint"></td>
                 </tr>
-                <tr>
-                    <th>Supported Extensions</th>
-                    <td>
-                        <ul id="modalSupportedExtensions"></ul>
-                    </td>
-                </tr>
-            </table>
-
-            <h3>Authenticator Get Info</h3>
-            <table class="modal-table">
-                <tr>
-                    <th>Versions</th>
-                    <td>
-                        <ul id="modalAuthGetInfoVersions"></ul>
-                    </td>
-                </tr>
+                
                 <tr>
                     <th>Extensions</th>
                     <td>
@@ -337,10 +316,6 @@
                     <th>Max RP IDs For Set Min PIN Length</th>
                     <td id="modalMaxRPIDsForSetMinPINLength"></td>
                 </tr>
-            </table>
-
-            <h3>Additional Metadata</h3>
-            <table class="modal-table">
                 <tr>
                     <th>Matcher Protection</th>
                     <td>
