--- a/Explorer/index.html
+++ b/Explorer/index.html
@@ -75,16 +75,16 @@
             width: 100%;
             height: 100%;
             overflow: auto;
-            background-color: rgb(0,0,0);
-            background-color: rgba(0,0,0,0.4);
+            background-color: rgba(0, 0, 0, 0.4);
             padding-top: 60px;
         }
         .modal-content {
-            background-color: #fefefe;
+            background-color: #f4f4f9;
             margin: 5% auto;
             padding: 20px;
             border: 1px solid #888;
             width: 80%;
+            color: #333;
         }
         .close {
             color: #aaa;
@@ -123,7 +123,24 @@
         }
         /* Update modal header styles */
         .modal-content h2, .modal-content h3 {
-            color: #333; /* Change text color to dark gray for better readability */
+            color: #4CAF50; /* Match the main page header color */
+        }
+        /* Button styles */
+        #showRawDataBtn {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 10px 0;
+            cursor: pointer;
+            border-radius: 4px;
+        }
+        #showRawDataBtn:hover {
+            background-color: #45a049;
         }
     </style>
 </head>
